--- a/main.html
+++ b/main.html
@@ -8,7 +8,86 @@
   </head>
   <body>
     <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+   
+    <tr>
+        <th>Main Table Header 1</th>
+        <th>Main Table Header 2</th>
+    </tr>
+    <tr>
+        <td>
+            <!-- First Nested Table -->
+            <table>
+                <tr>
+                    <th>Nested Table 1</th>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+                <tr>
+                    <td>Row 1</td>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <!-- Second Nested Table -->
+            <table>
+                <tr>
+                    <th>Nested Table 2</th>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+                <tr>
+                    <td>Row 1</td>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <!-- Third Nested Table -->
+            <table>
+                <tr>
+                    <th>Nested Table 3</th>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+                <tr>
+                    <td>Row 1</td>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <ul>
+                            <li>List item 1</li>
+                            <li>List item 2</li>
+                            <li>List item 3</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td>
+            <!-- Fourth Nested Table -->
+            <table>
+                <tr>
+                    <th>Nested Table 4</th>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                </tr>
+                <tr>
+                    <td class="black-cell">HTML</td>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+
+
     </table>
   </body>
 </html>
