--- a/main.html
+++ b/main.html
@@ -8,86 +8,100 @@
   </head>
   <body>
     <table style="width: 100%; height: 100%">
-   
-    <tr>
-        <th>Main Table Header 1</th>
-        <th>Main Table Header 2</th>
-    </tr>
-    <tr>
-        <td>
+      <thead>
+        <tr>
+          <th>Main Table Header 1</th>
+          <th>Main Table Header 2</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
             <!-- First Nested Table -->
             <table>
+              <thead>
                 <tr>
-                    <th>Nested Table 1</th>
-                    <th>Column 1</th>
-                    <th>Column 2</th>
+                  <th>Nested Table 1</th>
+                  <th>Column 1</th>
+                  <th>Column 2</th>
                 </tr>
+              </thead>
+              <tbody>
                 <tr>
-                    <td>Row 1</td>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
+                  <td>Row 1</td>
+                  <td>Data 1</td>
+                  <td>Data 2</td>
                 </tr>
+              </tbody>
             </table>
-        </td>
-        <td>
+          </td>
+          <td>
             <!-- Second Nested Table -->
             <table>
+              <thead>
                 <tr>
-                    <th>Nested Table 2</th>
-                    <th>Column 1</th>
-                    <th>Column 2</th>
+                  <th>Nested Table 2</th>
+                  <th>Column 1</th>
+                  <th>Column 2</th>
                 </tr>
+              </thead>
+              <tbody>
                 <tr>
-                    <td>Row 1</td>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
+                  <td>Row 1</td>
+                  <td>Data 1</td>
+                  <td>Data 2</td>
                 </tr>
+              </tbody>
             </table>
-        </td>
-    </tr>
-    <tr>
-        <td>
+          </td>
+        </tr>
+        <tr>
+          <td>
             <!-- Third Nested Table -->
             <table>
+              <thead>
                 <tr>
-                    <th>Nested Table 3</th>
-                    <th>Column 1</th>
-                    <th>Column 2</th>
+                  <th>Nested Table 3</th>
+                  <th>Column 1</th>
+                  <th>Column 2</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Row 1</td>
+                  <td>Data 1</td>
+                  <td>Data 2</td>
                 </tr>
                 <tr>
-                    <td>Row 1</td>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
+                  <td colspan="3">
+                    <ul>
+                      <li>List item 1</li>
+                      <li>List item 2</li>
+                      <li>List item 3</li>
+                    </ul>
+                  </td>
                 </tr>
-                <tr>
-                    <td colspan="3">
-                        <ul>
-                            <li>List item 1</li>
-                            <li>List item 2</li>
-                            <li>List item 3</li>
-                        </ul>
-                    </td>
-                </tr>
+              </tbody>
             </table>
-        </td>
-        <td>
+          </td>
+          <td>
             <!-- Fourth Nested Table -->
             <table>
+              <thead>
                 <tr>
-                    <th>Nested Table 4</th>
-                    <th>Column 1</th>
-                    <th>Column 2</th>
+                  <th>Nested Table 4</th>
+                  <th>Column 1</th>
+                  <th>Column 2</th>
                 </tr>
+              </thead>
+              <tbody>
                 <tr>
-                    <td class="black-cell">HTML</td>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
+                  <td class="black-cell">HTML</td>
+                  <td>Data 1</td>
+                  <td>Data 2</td>
                 </tr>
+              </tbody>
             </table>
-        </td>
-    </tr>
-
-
-    </table>
-  </body>
-</html>
+          </td>
+        </tr>
+   
