--- a/main.html
+++ b/main.html
@@ -5,103 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
+	  <style>
+		  table {
+	width: 100%;
+	border-collapse: separate;
+	font-size: 18px;
+	text-align: center;
+	border: 3px solid #7a0000;
+        }
+th, td {
+	padding: 15px;
+	border: 3px solid #007308;
+}
+#black {
+	background-color: #000000;
+	color: #ffffff;
+}
+	  </style>
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <thead>
-        <tr>
-          <th>Main Table Header 1</th>
-          <th>Main Table Header 2</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <!-- First Nested Table -->
-            <table>
-              <thead>
-                <tr>
-                  <th>Nested Table 1</th>
-                  <th>Column 1</th>
-                  <th>Column 2</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Row 1</td>
-                  <td>Data 1</td>
-                  <td>Data 2</td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-          <td>
-            <!-- Second Nested Table -->
-            <table>
-              <thead>
-                <tr>
-                  <th>Nested Table 2</th>
-                  <th>Column 1</th>
-                  <th>Column 2</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Row 1</td>
-                  <td>Data 1</td>
-                  <td>Data 2</td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <!-- Third Nested Table -->
-            <table>
-              <thead>
-                <tr>
-                  <th>Nested Table 3</th>
-                  <th>Column 1</th>
-                  <th>Column 2</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Row 1</td>
-                  <td>Data 1</td>
-                  <td>Data 2</td>
-                </tr>
-                <tr>
-                  <td colspan="3">
-                    <ul>
-                      <li>List item 1</li>
-                      <li>List item 2</li>
-                      <li>List item 3</li>
-                    </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-          <td>
-            <!-- Fourth Nested Table -->
-            <table>
-              <thead>
-                <tr>
-                  <th>Nested Table 4</th>
-                  <th>Column 1</th>
-                  <th>Column 2</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="black-cell">HTML</td>
-                  <td>Data 1</td>
-                  <td>Data 2</td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
    
+		<table style="width: 100%; height: 100%">
+      <!-- Your code here -->
+        <tr>
+            <td>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">Nested Table 2</th>
+                        </tr>
+                        <tr>
+                            <th>Column 1</th>
+                            <th>Column 2</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>abc</td>
+                            <td>def</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nested Table 1</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>List item</li>
+                                    <li>List item</li>
+                                    <li>List item</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">Nested Table 3</th>
+                        </tr>
+                        <tr>
+                            <td>Nested Table</td>
+                            <td>Demo Continued</td>
+                        </tr>
+                    </thead>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nested Table 4</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>HTML</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </table>
+    
+  </body>
+</html>
